--- a/GameplayTimeTracker/GameplayTimeTracker.csproj
+++ b/GameplayTimeTracker/GameplayTimeTracker.csproj
@@ -38,11 +38,13 @@
     </ItemGroup>
 
     <ItemGroup>
+      <PackageReference Include="IconExtractor" Version="1.0.1" />
+      <PackageReference Include="IconUtilities" Version="1.0.2" />
       <PackageReference Include="Microsoft.NETFramework.ReferenceAssemblies" Version="1.0.3">
         <PrivateAssets>all</PrivateAssets>
         <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       </PackageReference>
-      <PackageReference Include="System.Drawing.Common" Version="7.0.0" />
+      <PackageReference Include="System.Drawing.Common" Version="8.0.10" />
     </ItemGroup>
 
 </Project>
