--- a/GameplayTimeTracker/GameplayTimeTracker.csproj
+++ b/GameplayTimeTracker/GameplayTimeTracker.csproj
@@ -5,6 +5,7 @@
         <TargetFramework>net7.0-windows</TargetFramework>
         <Nullable>enable</Nullable>
         <UseWPF>true</UseWPF>
+        <UseWindowsForms>true</UseWindowsForms>
         <AssemblyName>Gameplay Time Tracker</AssemblyName>
     </PropertyGroup>
 
@@ -44,7 +45,11 @@
         <PrivateAssets>all</PrivateAssets>
         <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       </PackageReference>
+      <PackageReference Include="NotifyIcon" Version="1.23.10209.11223" />
+      <PackageReference Include="NotifyIcon.Base" Version="1.23.10209.11223" />
+      <PackageReference Include="NotifyIcon.Windows" Version="1.23.10209.11223" />
       <PackageReference Include="System.Drawing.Common" Version="8.0.10" />
+      <PackageReference Include="System.Windows.Forms" Version="4.0.0" />
     </ItemGroup>
 
 </Project>
