Added Icon to application

--- a/GameplayTimeTracker/GameplayTimeTracker.csproj
+++ b/GameplayTimeTracker/GameplayTimeTracker.csproj
@@ -33,6 +33,15 @@
         <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       </Content>
       <None Remove="Effects\SaturationEffect.ps" />
+      <None Remove="assets\appicon.png" />
+      <None Remove="assets\appicon.ico" />
+      <Content Include="assets\appicon.ico">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </Content>
+      <None Remove="assets\MyAppIcon.ico" />
+      <Content Include="assets\MyAppIcon.ico">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </Content>
     </ItemGroup>
 
     <ItemGroup>
