Started implementing settings window

--- a/GameplayTimeTracker/settings.json
+++ b/GameplayTimeTracker/settings.json
@@ -3,6 +3,7 @@
     "themeName": "default",
     "colors": {
       "bgColor": "#1E2030",
+      "footerColor": "#90EE90",
       "darkColor": "#1E2030",
       "lightColor": "#2E324A",
       "fontColor": "#DAE4FF",
@@ -11,6 +12,24 @@
       "rightColor": "#B7BDF8",
       "tileColor1": "#414769",
       "tileColor2": "#2E324A",
+      "shadowColor": "#151515",
+      "editColor1": "#7DD6EB",
+      "editColor2": "#7DD6EB"
+    }
+  },
+  {
+    "themeName": "pink",
+    "colors": {
+      "bgColor": "#45092b",
+      "footerColor": "#90EE90",
+      "darkColor": "#1E2030",
+      "lightColor": "#2E324A",
+      "fontColor": "#DAE4FF",
+      "runningColor": "#C3E88D",
+      "leftColor": "#89ACF2",
+      "rightColor": "#B7BDF8",
+      "tileColor1": "#db1484",
+      "tileColor2": "#7d2055",
       "shadowColor": "#151515",
       "editColor1": "#7DD6EB",
       "editColor2": "#7DD6EB"
