--- a/GameplayTimeTracker/GameplayTimeTracker.csproj
+++ b/GameplayTimeTracker/GameplayTimeTracker.csproj
@@ -65,6 +65,7 @@
       <PackageReference Include="NotifyIcon.Windows" Version="1.23.10209.11223" />
       <PackageReference Include="System.Drawing.Common" Version="8.0.10" />
       <PackageReference Include="System.Windows.Forms" Version="4.0.0" />
+      <PackageReference Include="WindowsShortcutFactory" Version="1.2.0" />
     </ItemGroup>
 
 </Project>
