--- a/GameplayTimeTracker/GameplayTimeTracker.csproj
+++ b/GameplayTimeTracker/GameplayTimeTracker.csproj
@@ -51,6 +51,10 @@
 <!--            <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>-->
 <!--        </PackageReference>-->
         <PackageReference Include="NotifyIcon.Windows" Version="1.23.10209.11223"/>
+        <PackageReference Include="SharpDX" Version="4.2.0" />
+        <PackageReference Include="SharpDX.D3DCompiler" Version="4.2.0" />
+        <PackageReference Include="SharpDX.Direct2D1" Version="4.2.0" />
+        <PackageReference Include="SharpDX.Direct3D11" Version="4.2.0" />
 <!--        <PackageReference Include="securifybv.ShellLink" Version="0.1.0" />-->
         <PackageReference Include="Shellify" Version="0.4.0" />
         <PackageReference Include="System.Drawing.Common" Version="8.0.10"/>
