--- a/GameplayTimeTracker/GameplayTimeTracker.csproj
+++ b/GameplayTimeTracker/GameplayTimeTracker.csproj
@@ -51,15 +51,19 @@
 <!--            <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>-->
 <!--        </PackageReference>-->
         <PackageReference Include="NotifyIcon.Windows" Version="1.23.10209.11223"/>
-        <PackageReference Include="SharpDX" Version="4.2.0" />
-        <PackageReference Include="SharpDX.D3DCompiler" Version="4.2.0" />
-        <PackageReference Include="SharpDX.Direct2D1" Version="4.2.0" />
-        <PackageReference Include="SharpDX.Direct3D11" Version="4.2.0" />
-<!--        <PackageReference Include="securifybv.ShellLink" Version="0.1.0" />-->
         <PackageReference Include="Shellify" Version="0.4.0" />
         <PackageReference Include="System.Drawing.Common" Version="8.0.10"/>
         <PackageReference Include="Extended.Wpf.Toolkit" Version="4.6.1"/>
         <PackageReference Include="WindowsShortcutFactory" Version="1.2.0"/>
+        <PackageReference Include="MonoMac.NetStandard" Version="0.0.4" ExcludeAssets="runtime" />
+        <PackageReference Include="AtkSharp" Version="3.24.24.95" ExcludeAssets="runtime" />
+        <PackageReference Include="CairoSharp" Version="3.24.24.95" ExcludeAssets="runtime" />
+        <PackageReference Include="GdkSharp" Version="3.24.24.95" ExcludeAssets="runtime" />
+        <PackageReference Include="GioSharp" Version="3.24.24.95" ExcludeAssets="runtime" />
+        <PackageReference Include="GLibSharp" Version="3.24.24.95" ExcludeAssets="runtime" />
+        <PackageReference Include="GtkSharp" Version="3.24.24.95" ExcludeAssets="runtime" />
+        <PackageReference Include="PangoSharp" Version="3.24.24.95" ExcludeAssets="runtime" />
+        <PackageReference Include="Xceed.Wpf.Themes.MaterialDesign" ExcludeAssets="runtime" />
     </ItemGroup>
 
 </Project>
